:lambda-pull: https://github.com/elastic/apm-aws-lambda/pull/

////
[float]
[[lambda-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
- Cool new feature: {lambda-pull}2526[#2526]

[float]
===== Bug fixes
////

[float]
[[lambda-1.3.1]]
=== 1.3.1 - 2023/04/04

https://github.com/elastic/apm-aws-lambda/compare/v1.3.0...v1.3.1[View commits]

[float]
===== Bug fixes
- Print response body on error if decoding fails {lambda-pull}382[382]

[float]
[[lambda-1.3.0]]
=== 1.3.0 - 2023/02/22

https://github.com/elastic/apm-aws-lambda/compare/v1.2.0...v1.3.0[View commits]

[float]
===== Features
- experimental:[] Create proxy transaction with error results if not reported by agent {lambda-pull}315[315]
- Wait for the final platform report metrics on shutdown {lambda-pull}347[347]
- Process platform report metrics when extension is lagging {lambda-pull}358[358]
- Add TLS support {lambda-pull}357[357]

[float]
[[lambda-1.2.0]]
=== 1.2.0 - 2022/11/01

[float]
===== Features
- Parse and log APM Server error responses, and backoff on critical errors {lambda-pull}281[281]
- Disable CGO to prevent libc/ABI compatibility issues {lambda-pull}292[292]
- Deprecate `ELASTIC_APM_DATA_RECEIVER_TIMEOUT_SECONDS` in favour of `ELASTIC_APM_DATA_RECEIVER_TIMEOUT` {lambda-pull}294[294]
- Log shutdown reason on exit {lambda-pull}297[297]
- Add support for collecting and shipping function logs to APM Server {lambda-pull}303[303]
- Batch data collected from lambda logs API before sending to APM Server {lambda-pull}314[314]

[float]
===== Bug fixes
- Fix possible data corruption while processing multiple log events {lambda-pull}309[309]

[float]
[[lambda-1.1.0]]
=== 1.1.0 - 2022/08/24

https://github.com/elastic/apm-aws-lambda/compare/v1.0.2...v1.1.0[View commits]


[float]
==== Features
- Added support for Secret Manager {lambda-pull}208[208]
- Added support for Lambda platform metrics {lambda-pull}202[202]
- Migrated to AWS SDK for Go v2 {lambda-pull}232[232]